--- a/WorktimeAccess/App.xaml
+++ b/WorktimeAccess/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="WorktimeAccess.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WorktimeAccess"
              StartupUri="AccessWindow.xaml">
     <Application.Resources>
-         
+         <TextBox x:Key="" Name="inputField" Width="200" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" />
     </Application.Resources>
 </Application>
